--- a/index.html
+++ b/index.html
@@ -113,17 +113,6 @@
             <img src="imgs/bricks-laying.svg" alt="">
           </div>
 
-          <button class="" id="l111">
-            Тест 1
-          </button>
-          <button class="" id="l222">
-            Тест 2
-          </button>
-          <button class="" id="l333">
-            Тест 3
-          </button>
-
-
 
           <div class="save-pdf flex-center" data-tooltip="Скачать PDF">
             <img src="imgs/pdf-download.svg" alt="">
@@ -134,34 +123,22 @@
             <div class="inner">
               <h2>Планировка</h2>
 
-              <div class="wrap-item wrap-item_v2">
-                <div class="item active" id="lvl1">
-                  <h4 class="item-title">Планировка 1</h4>
-                  <span class="val">155 m<sup>2</sup></span>
-                  <div class="btn-item">
-                    <span class="checked"></span>
-                  </div>
+              <div class="group-items layout-home">
+                <div class="layout-group-item active" id="layout-type-1">
+                  <div class="img"><img src="/img/icons/home-active.svg" alt=""></div>
+                  <h3>Планировка 1 (<span class="val">155 m<sup>2</sup></span>)</h3>
                 </div>
-                <div class="item" id="lvl2">
-                  <h4 class="item-title">Планировка 2</h4>
-                  <span class="val">246 m<sup>2</sup></span>
-                  <div class="btn-item">
-                    <span class="checked"></span>
-                  </div>
+                <div class="layout-group-item" id="layout-type-2">
+                  <div class="img"><img src="/img/icons/home-active.svg" alt=""></div>
+                  <h3>Планировка 2 (<span class="val">246 m<sup>2</sup></span>)</h3>
                 </div>
-                <div class="item" id="lvl3">
-                  <h4 class="item-title">Планировка 3</h4>
-                  <span class="val">302 m<sup>2</sup></span>
-                  <div class="btn-item">
-                    <span class="checked"></span>
-                  </div>
+                <div class="layout-group-item" id="layout-type-3">
+                  <div class="img"><img src="/img/icons/home-active.svg" alt=""></div>
+                  <h3>Планировка 3 (<span class="val">302 m<sup>2</sup></span>)</h3>
                 </div>
-                <div class="item" id="lvl4">
-                  <h4 class="item-title">Планировка 4</h4>
-                  <span class="val">348 m<sup>2</sup></span>
-                  <div class="btn-item">
-                    <span class="checked"></span>
-                  </div>
+                <div class="layout-group-item" id="layout-type-4">
+                  <div class="img"><img src="/img/icons/home-active.svg" alt=""></div>
+                  <h3>Планировка 4 (<span class="val">348 m<sup>2</sup></span>)</h3>
                 </div>
               </div>
             </div>
