--- a/index.html
+++ b/index.html
@@ -148,6 +148,16 @@
         <div class="app-menu-item flex-center" data-chapter="bricklaying" data-tooltip="Тип кладки">
           <img src="imgs/bricks-laying.svg" alt="">
         </div>
+        <div class="app-menu-item flex-center" data-chapter="windows" data-tooltip="Окна">
+          <img class="icon" src="img/icons/window.svg" alt="" />
+        </div>
+
+        <div class="app-menu-item flex-center" data-chapter="cokel" data-tooltip="Цоколь">
+          <img class="icon" src="img/icons/house-active.svg" alt="" />
+        </div>
+        <div class="app-menu-item flex-center" data-chapter="cher" data-tooltip="Черепица">
+          <img class="icon" src="img/icons/roof-active.svg" alt="" />
+        </div>
 
 
 
