add color windows

--- a/index.html
+++ b/index.html
@@ -158,9 +158,6 @@
         <div class="app-menu-item flex-center" data-chapter="cher" data-tooltip="Черепица">
           <img class="icon" src="img/icons/roof-active.svg" alt="" />
         </div>
-
-
-
       </div>
       <div class="fr">
         <div class="app-chapter" id="layout">
@@ -410,6 +407,38 @@
               <div class="group-item" data-value="chaotic">
                 <div class="img"><img src="/imgs/bricks-laying3_2.svg" alt=""></div>
                 <h3>Хаотичная</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="app-chapter" id="windows">
+          <div class="inner">
+            <h2>Окна</h2>
+            <div class="wrap-item custom-scroll">
+              <div class="item active" style="background-image: url(img/okna/Windows_Korich.jpg);" data-color="221202">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/okna/Windows_Seryi.jpg);" data-color="3a3a38">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/okna/Windows_White.jpg);" data-color="FCF9FF">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/okna/Windows_Red.jpg);" data-color="540103">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/okna/Windows_Zelenyi.jpg);" data-color="053800">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
               </div>
             </div>
           </div>
