--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <img class="icon" src="img/icons/window.svg" alt="" />
         </div>
 
-        <div class="app-menu-item flex-center" data-chapter="cokel" data-tooltip="Цоколь">
+        <div class="app-menu-item flex-center" data-chapter="dado" data-tooltip="Цоколь">
           <img class="icon" src="img/icons/house-active.svg" alt="" />
         </div>
         <div class="app-menu-item flex-center" data-chapter="cher" data-tooltip="Черепица">
@@ -443,7 +443,155 @@
             </div>
           </div>
         </div>
+        <div class="app-chapter" id="dado">
+          <div class="inner">
+            <h2>Цоколь</h2>
+            <div class="wrap-item custom-scroll">
+              <div class="item active" style="background-image: url(img/kladka_tsokol/Сottage_brick.jpg);"
+                data-textures="img/kladka_tsokol/Сottage_brick.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/kladka_tsokol/Stroeher_Antrazit.jpg);"
+                data-textures="img/kladka_tsokol/Stroeher_Antrazit.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/kladka_tsokol/Stroeher_Bunt.jpg);"
+                data-textures="img/kladka_tsokol/Stroeher_Bunt.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/kladka_tsokol/Stroeher_Eres.jpg);"
+                data-textures="img/kladka_tsokol/Stroeher_Eres.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/kladka_tsokol/Stroeher_Gled.jpg);"
+                data-textures="img/kladka_tsokol/Stroeher_Gled.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/kladka_tsokol/Stroeher_Grau.jpg);"
+                data-textures="img/kladka_tsokol/Stroeher_Grau.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/kladka_tsokol/Stroeher_Pidra.jpg);"
+                data-textures="img/kladka_tsokol/Stroeher_Pidra.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/kladka_tsokol/Stroeher_Rose.jpg);"
+                data-textures="img/kladka_tsokol/Stroeher_Rose.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/kladka_tsokol/Stroeher_Schildpatt.jpg);"
+                data-textures="img/kladka_tsokol/Stroeher_Schildpatt.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/kladka_tsokol/Stroeher_Tabakbraun.jpg);"
+                data-textures="img/kladka_tsokol/Stroeher_Tabakbraun.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/kladka_tsokol/Stroeher_Stroeher.jpg);"
+                data-textures="img/kladka_tsokol/Stroeher_Stroeher.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/kladka_tsokol/Stroeher_Weiss.jpg);"
+                data-textures="img/kladka_tsokol/Stroeher_Weiss.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="app-chapter" id="cher">
+          <div class="inner">
+            <h2>Черепица</h2>
+            <div class="wrap-item custom-scroll">
+              <div class="item active" style="background-image: url(img/cher/Cherepicza.jpg);"
+                data-textures="img/cher/Cherepicza.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/cher/cherepitsa-2.jpg);"
+                data-textures="img/cher/cherepitsa-2.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/cher/cherepitsa-3.jpg);"
+                data-textures="img/cher/cherepitsa-3.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/cher/cherepitsa-4.jpg);"
+                data-textures="img/cher/cherepitsa-4.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/cher/cherepitsa-5.jpg);"
+                data-textures="img/cher/cherepitsa-5.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/cher/cherepitsa-6.jpg);"
+                data-textures="img/cher/cherepitsa-6.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/cher/cherepitsa-7.jpg);"
+                data-textures="img/cher/cherepitsa-7.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/cher/cherepitsa-8.jpg);"
+                data-textures="img/cher/cherepitsa-8.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/cher/cherepitsa-9.jpg);"
+                data-textures="img/cher/cherepitsa-9.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/cher/cherepitsa-10.jpg);"
+                data-textures="img/cher/cherepitsa-10.jpg">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
+    </div>
+    </div>
     </div>
 
     <div id="house">
