--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
   <meta name="theme-color" content="#5944b8">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
   <link rel="stylesheet" href="fonts/font.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/style.css?ver=1.0" />
 
   <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
 
@@ -30,16 +33,6 @@
 </head>
 
 <body id="AKBARS">
-  <!-- loading-banner  -->
-  <!-- <div id="loading-banner" class="loading-banner">
-    <a href="https://akbarskeramic.ru/" class="loading-banner__logo">
-      <img src="imgs/logo-white-akbars.svg" alt="Акбарс Керамик">
-    </a>
-    <p class="loading-banner__text">
-      <span id="loading-text">Загрузка страницы</span>
-    </p>
-  </div> -->
-
   <div class="loading-banner" id="loading-banner">
     <div class="wrap-prelogo">
       <div class="prelogo">
@@ -48,7 +41,7 @@
         </a>
 
       </div>
-      <h2 class="loading-title">Ак барс керамик</h2>
+      <h2 class="loading-title">ак барс керамик</h2>
     </div>
     <div class="loading-text">
       <div class="loading-dots">
@@ -167,19 +160,19 @@
             <div class="group-items layout-home">
               <div class="layout-group-item active" id="layout-type-1">
                 <div class="img"><img src="/img/icons/home-active.svg" alt=""></div>
-                <h3>Планировка 1 (<span class="val">155 m<sup>2</sup></span>)</h3>
+                <h3>Планировка 1 (<span class="val">155 m<sub>2</sub></span>)</h3>
               </div>
               <div class="layout-group-item" id="layout-type-2">
                 <div class="img"><img src="/img/icons/home-active.svg" alt=""></div>
-                <h3>Планировка 2 (<span class="val">246 m<sup>2</sup></span>)</h3>
+                <h3>Планировка 2 (<span class="val">246 m<sub>2</sub></span>)</h3>
               </div>
               <div class="layout-group-item" id="layout-type-3">
                 <div class="img"><img src="/img/icons/home-active.svg" alt=""></div>
-                <h3>Планировка 3 (<span class="val">302 m<sup>2</sup></span>)</h3>
+                <h3>Планировка 3 (<span class="val">302 m<sub>2</sub></span>)</h3>
               </div>
               <div class="layout-group-item" id="layout-type-4">
                 <div class="img"><img src="/img/icons/home-active.svg" alt=""></div>
-                <h3>Планировка 4 (<span class="val">348 m<sup>2</sup></span>)</h3>
+                <h3>Планировка 4 (<span class="val">348 m<sub>2</sub></span>)</h3>
               </div>
             </div>
           </div>
@@ -425,7 +418,7 @@
                   <span class="checked"></span>
                 </div>
               </div>
-              <div class="item" style="background-image: url(img/okna/Windows_White.jpg);" data-color="FCF9FF">
+              <div class="item" style="background-image: url(img/okna/Windows_White.jpg);" data-color="DDD3C4">
                 <div class="btn-item">
                   <span class="checked"></span>
                 </div>
@@ -647,8 +640,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script type="module" src="js/main.js" defer></script>
-
-  <script type="module" src="js/model.js" defer></script>
+  <script type="module" src="js/model.js?ver=1.0" defer></script>
 </body>
 
 </html>
