--- a/index.html
+++ b/index.html
@@ -76,45 +76,31 @@
       <div class="mode" id="mode-3d">2D</div>
       <div class="mode active" id="mode-3d-three">3D</div>
     </div>
-    <div id="pdf" class="box-shadow">
-      <div class="mode">
+    <div class="box-shadow sidebar-export">
+      <div class="sidebar-export__item">
         <div class="save-pdf flex-center" data-tooltip="Скачать PDF">
-          <svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-            x="0px" y="0px" viewBox="0 0 320 320" style="enable-background:new 0 0 320 320;" xml:space="preserve">
+          <svg enable-background="new 0 0 128 170" height="170px" id="Layer_1" version="1.1" viewBox="0 0 128 170"
+            width="128px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+            xmlns:xlink="http://www.w3.org/1999/xlink">
             <g>
-              <path class="st0" d="M170.6,301c-28,0-56,0-83.9-0.1c-2.9,0-4.9,0.7-6.7,3.1c-3,4.2-6.4,8.1-9.7,12c-4.5,5.2-10.7,5.3-15,0
-          		C37.5,294.5,19.9,272.7,2.4,251c-2.5-3.1-3.1-6.6-1.3-10.2c1.8-3.6,4.8-5.3,8.9-5.1c4.5,0.1,9-0.2,13.5,0.1
-          		c3.4,0.2,4.1-1.2,4.1-4.3c-0.1-19.2-0.1-38.3-0.1-57.5c0-9.2,1.5-11.2,10.7-12.9c3.1-0.6,1.8-2.7,1.8-4.2c0.1-22.5,0.1-45,0.1-67.4
-          		c0-6.3,0-12.7,0-19c0-3.5,1.1-6.4,3.7-8.9C63.1,42.3,82.4,23,101.7,3.7c2.5-2.5,5.3-3.7,8.9-3.7c48.1,0,96.3,0,144.4,0
-          		c7.1,0,10.7,3.8,10.7,11.4c0,23.8,0.1,47.6-0.1,71.4c0,3.8,0.7,5.2,4.8,5c9.8-0.3,19.7-0.2,29.5-0.1c11.5,0.1,20,8.2,20,19.7
-          		c0.1,27.6,0.1,55.3,0,82.9c-0.1,11.3-8.2,19.4-19.5,19.7c-10,0.2-20,0.3-30-0.1c-4.2-0.1-4.8,1.3-4.8,5.1
-          		c0.1,24.3,0.1,48.6,0.1,72.9c0,10-2.8,12.8-12.7,12.8C225.5,301,198,301,170.6,301z M98.3,281.6c0.8,1.1,1.7,0.9,2.5,0.9
-          		c47.5,0,95,0,142.4,0.1c3.2,0,3.8-1,3.8-4c-0.1-21.2-0.2-42.3,0-63.5c0-4-1.1-4.9-5-4.9c-35.5,0.1-71-0.2-106.4,0.3
-          		c-13.6,0.2-23.3-8.8-23-23.2c0.6-25.8,0.2-51.6,0.2-77.4c0-14.2,7.7-21.9,21.8-22c36,0,72-0.1,107.9,0.1c3.5,0,4.5-0.8,4.4-4.4
-          		c-0.2-20.2-0.1-40.3,0-60.5c0-3.1-0.6-4.2-4-4.2c-40.1,0.1-80.3,0.1-120.4,0c-3.5,0-4,1.2-4,4.2c0.1,14.3,0.1,28.6,0.1,43
-          		c0,9.2-3.1,12.2-12.4,12.2c-14.5,0-29,0.1-43.5,0c-2.6,0-3.8,0.4-3.8,3.5c0.1,25.3,0.1,50.6,0,76c0,3.1,1.2,3.5,3.8,3.4
-          		c7.5-0.1,15-0.1,22.5,0c9.2,0,12.6,3.4,12.6,12.6c0,19.3,0.1,38.6-0.1,58c0,3.2,0.7,4.5,4.1,4.2c4-0.3,8,0,12-0.1
-          		c4.5-0.2,8.3,0.7,10.4,5.2c2.1,4.6,0.4,8.3-2.5,11.9C113.8,262.3,106,272,98.3,281.6z M216,191.6c26.8,0,53.6-0.1,80.4,0.1
-          		c3.7,0,4.8-0.8,4.7-4.7c-0.2-25.3-0.2-50.6,0-75.9c0-3.3-0.6-4.6-4.2-4.5c-53.6,0.1-107.2,0.1-160.9,0c-3.9,0-4.6,1.3-4.6,4.8
-          		c0.1,25,0.2,50,0,74.9c0,4.6,1.5,5.4,5.7,5.4C163.3,191.5,189.6,191.6,216,191.6z M96.4,254.1c-2.3,0-3.2-0.1-4.1,0
-          		c-9.8,1.1-13.5-4.3-13.3-13.2c0.4-19,0.1-37.9,0.2-56.9c0-3.2-0.7-4.3-4-4.2c-8.1,0.3-16.3,0.3-24.4,0c-3.7-0.1-4.7,0.8-4.7,4.6
-          		c0.2,19.6,0.1,39.3,0.1,58.9c0,7.6-3.2,10.7-10.9,10.9c-1.7,0-3.6-0.7-5.4,0.9c10.9,13.5,21.8,26.8,32.9,40.6
-          		C73.8,282,84.6,268.6,96.4,254.1z M99.8,33.5c-8.9,8.7-17.6,17.2-26.6,26.2c8.3,0,16.3,0,24.4,0c2.2,0,2.3-1.3,2.3-3
-          		C99.8,48.9,99.8,41.2,99.8,33.5z" />
-              <path class="st0" d="M197.2,148.6c0-7.5,0-15,0-22.4c0-6.7,1.9-8.5,8.7-8.5c5.8,0,11.7-0.8,17.4,0.5c12.7,3,18.5,12.3,20.3,24.2
-          		c1.6,10.7-0.2,20.9-7.7,29.3c-4.6,5.3-10.5,7.9-17.5,8.1c-4.5,0.1-9,0.1-13.5,0.1c-5.4-0.1-7.6-2.1-7.7-7.5
-          		C197.1,164.6,197.2,156.6,197.2,148.6z M214.8,130.1c-1,1.5-5-2.4-5.1,2.4c-0.1,11,0,21.9,0,32.9c0,1.3,0.4,2,1.9,2.3
-          		c10,1.9,17.9-3.7,19.2-13.8c0.4-3.1,0.4-6.3,0.1-9.4C230,134.9,224.9,130.2,214.8,130.1z" />
-              <path class="st0"
-                d="M147.2,148.5c0-7.6-0.1-15.3,0-22.9c0.1-5.8,2.1-7.9,7.8-7.8c6.3,0.2,12.6-1,18.8,1.1
-          		c9.5,3.2,15.1,11.8,14,21.5c-1,9.5-8.7,16.8-18.5,17.8c-9.6,0.9-9.6,0.9-9.6,10.8c0,1.3,0.1,2.7,0,4c-0.3,4.7-2.7,7.4-6.5,7.1
-          		c-4.3-0.3-6-3.1-6-7.1C147.2,164.7,147.2,156.6,147.2,148.5z M164.1,145.9c1.1,0,1.8,0,2.4,0c5.3-0.2,9-3.6,8.9-8.1
-          		c-0.1-5.1-4.2-7.6-11.7-7.8c-7-0.2-3.1,4.9-3.9,7.6c-0.3,1,0.1,2.3-0.1,3.5C159.2,145,160.5,146.8,164.1,145.9z" />
-              <path class="st0" d="M252.9,148.9c0-7.7,0-15.3,0-22.9c0-6.1,1.9-8.2,7.9-8.2c6-0.1,12,0,18,0c4.2,0,6.9,2.2,6.8,6.3
-          		c0,4-2.7,6.2-6.9,6.1c-3.2,0-6.3,0.2-9.5-0.1c-3.2-0.3-3.9,1-3.9,4c0,8.2-0.1,8.2,8.1,8.2c7.5,0,10.5,1.7,10.6,6.1
-          		c0.2,4.6-3,6.5-10.7,6.5c-7.9,0-7.9,0-7.9,7.8c0,3.7,0.1,7.3-0.1,11c-0.1,3.8-2,6.5-6,6.5c-4.2,0-6.4-2.5-6.4-6.7
-          		C252.8,165.2,252.9,157,252.9,148.9z" />
+              <path
+                d="M63.798,121H59v22h5.422c3.709,0,6.56-1.023,8.554-2.896c1.993-1.871,2.99-4.637,2.99-8.207   s-0.997-6.202-2.99-8.127C70.981,121.846,67.923,121,63.798,121z"
+                fill="#231F20" />
+              <path
+                d="M37.721,122.136c-1.267-0.884-3.233-1.136-5.902-1.136H27v12h5.65c2.704,0,4.541-0.626,5.512-1.718   c0.971-1.093,1.456-2.631,1.456-4.729C39.618,124.456,38.985,123.02,37.721,122.136z"
+                fill="#231F20" />
+              <path
+                d="M127.613,29l0.004-0.004L99,0.379V0h-0.379l-0.117-0.117L98.387,0H10C4.478,0,0,4.477,0,10v150   c0,5.523,4.478,10,10,10h108c5.522,0,10-4.477,10-10V29H127.613z M44.013,136.811C41.395,138.89,37.399,140,32.026,140H27v10h-8   v-36h12.923c5.581,0,9.646,0.91,12.193,3.076c2.548,2.167,3.822,5.443,3.822,9.932C47.938,131.498,46.63,134.73,44.013,136.811z    M79.06,145.061C75.68,148.354,70.522,150,63.59,150H51v-36h13.006c6.481,0,11.457,1.412,14.924,4.584   c3.466,3.172,5.2,7.496,5.2,13.146C84.13,137.382,82.439,141.768,79.06,145.061z M113,121H96v8h16v7H96v14h-8v-36h25V121z M109,29   c-5.522,0-10-4.477-10-10V4.622L123.379,29H109z"
+                fill="#231F20" />
             </g>
+          </svg>
+        </div>
+      </div>
+      <div class="sidebar-export__item">
+        <div class="save-screenshot flex-center">
+          <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M512 144v288c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48h88l12.3-32.9c7-18.7 24.9-31.1 44.9-31.1h125.5c20 0 37.9 12.4 44.9 31.1L376 96h88c26.5 0 48 21.5 48 48zM376 288c0-66.2-53.8-120-120-120s-120 53.8-120 120 53.8 120 120 120 120-53.8 120-120zm-32 0c0 48.5-39.5 88-88 88s-88-39.5-88-88 39.5-88 88-88 88 39.5 88 88z" />
           </svg>
         </div>
       </div>
