--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         </div>
       </div>
       <div class="sidebar-export__item">
-        <div class="save-screenshot flex-center">
+        <div id="save-screenshot" class="save-screenshot flex-center">
           <svg viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
             <path
               d="M512 144v288c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V144c0-26.5 21.5-48 48-48h88l12.3-32.9c7-18.7 24.9-31.1 44.9-31.1h125.5c20 0 37.9 12.4 44.9 31.1L376 96h88c26.5 0 48 21.5 48 48zM376 288c0-66.2-53.8-120-120-120s-120 53.8-120 120 53.8 120 120 120 120-53.8 120-120zm-32 0c0 48.5-39.5 88-88 88s-88-39.5-88-88 39.5-88 88-88 88 39.5 88 88z" />
@@ -625,6 +625,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
+
+
+
   <script type="module" src="js/main.js" defer></script>
   <script type="module" src="js/model.js?ver=1.0" defer></script>
 </body>
