--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-  <title>3D модулятор кладки </title>
+  <title>3D модулятор кладки - Ак барс Керамик </title>
   <link type="image/x-icon" href="imgs/favicon.ico" rel="shortcut icon">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -126,7 +126,7 @@
       </div>
     </div>
     <div id="app-menu">
-      <div class="fl  custom-scroll">
+      <div class="fl custom-scroll">
         <div class="app-logo">
           <a href="https://akbarskeramic.ru/" class="flex-center" data-tooltip="АК Барс Керамик">
             <img src="imgs/logo-white-akbars.svg" alt="Акбарс Керамик">
@@ -158,7 +158,7 @@
           <img class="icon" src="img/icons/roof-active.svg" alt="" />
         </div>
       </div>
-      <div class="fr">
+      <div class="fr custom-scroll">
         <div class="app-chapter" id="layout">
           <div class="inner">
             <h2>Планировка</h2>
@@ -640,17 +640,21 @@
     </div>
   </section>
 
+  <div id="image-popup">
+    <span id="close-button">&#10006;</span>
+    <img id="popup-image" src="" alt="Изображение">
+    <button id="download-button">Скачать</button>
+    <button id="cancel-button">Отмена</button>>
+  </div>
+
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-  <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-
 
 
   <script type="module" src="js/main.js" defer></script>
-  <script type="module" src="js/model.js?ver=1.0" defer></script>
 </body>
 
 </html>
