--- a/index.html
+++ b/index.html
@@ -623,6 +623,14 @@
       </div>
     </div>
     <!-- 3D -->
+    <div id="info" style="position: absolute; top: 10px; left: 10px; color: black;left: 45%;z-index: 999;">
+      <p>
+        <b>X: <span id="positionX">0</span></b>
+        <b>Y: <span id="positionY">0</span></b>
+        <b>Z: <span id="positionZ">0</span></b>
+        <b>Zoom: <span id="zoomValue">0</span></b>
+      </p>
+    </div>
     <div id="layout-3d-three" style="display: block">
 
     </div>
