--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css" />
-  <link rel="stylesheet" href="css/style.css?ver=1.0" />
+  <link rel="stylesheet" href="css/style.css?ver=1.3" />
 
   <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
 
@@ -700,6 +700,11 @@
           </div>
         </div>
       </div>
+      <button class="close-menu"><svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M4.11 2.697L2.698 4.11 6.586 8l-3.89 3.89 1.415 1.413L8 9.414l3.89 3.89 1.413-1.415L9.414 8l3.89-3.89-1.415-1.413L8 6.586l-3.89-3.89z"
+            fill="#fff"></path>
+        </svg></button>
     </div>
     </div>
     </div>
@@ -765,7 +770,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 
-  <script type="module" src="js/main.js" defer></script>
+  <script type="module" src="js/main.js?ver=1.3" defer></script>
 </body>
 
 </html>
