--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css" />
   <link rel="stylesheet" href="css/style.css?ver=1.4" />
+  <link rel="stylesheet" href="css/pdf.css">
 
   <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
 
@@ -33,6 +34,20 @@
 </head>
 
 <body id="AKBARS">
+  <style>
+    #pdfContent {
+      position: absolute;
+      z-index: 99999;
+    }
+  </style>
+  <div id="pdfContent">
+    <h1 style="color: #000">Контент для PDF</h1>
+  </div>
+
+
+
+
+
   <div class="loading-banner" id="loading-banner">
     <div class="wrap-prelogo">
       <div class="prelogo">
@@ -763,6 +778,8 @@
     </div>
   </section>
 
+
+
   <div id="image-popup">
     <span id="close-button">&#10006;</span>
     <img id="popup-image" src="" alt="Изображение">
@@ -775,7 +792,10 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.1/html2pdf.bundle.min.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.71/pdfmake.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.71/vfs_fonts.js"></script>
 
   <script type="module" src="js/main.js?ver=1.4" defer></script>
 </body>
