--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
     <div class="box-shadow sidebar-export">
       <div class="sidebar-export__item">
         <div class="save-pdf flex-center" data-tooltip="Скачать PDF">
-          <svg enable-background="new 0 0 128 170" height="170px" id="Layer_1" version="1.1" viewBox="0 0 128 170"
-            width="128px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
+          <svg class="pdf-icon" enable-background="new 0 0 128 170" height="170px" id="Layer_1" version="1.1"
+            viewBox="0 0 128 170" width="128px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink">
             <g>
               <path
@@ -805,21 +805,21 @@
       </div>
       <div class="generator-pdf__table">
         <div class="generator-pdf__head row">
-          <span>Водосток:</span><span>Дымовая труба:</span><span>Окна:</span>
+          <span>Кровля:</span><span>Цоколь:</span><span>Ограждения:</span>
         </div>
         <div class="generator-pdf__content">
           <div class="generator-pdf__items">
-            <div class="generator-pdf__item">
-              <img src="bricks/preview/bricks1.png" alt="">
-              <p>Баварская кладка кора дуба</p>
+            <div class="generator-pdf__item not-text" id="pdf-roofing">
+              <div class="img"></div>
+              <!-- <p></p> -->
             </div>
-            <div class="generator-pdf__item">
-              <img src="bricks/preview/bricks1.png" alt="">
-              <p>Баварская кладка кора дуба</p>
+            <div class="generator-pdf__item not-text" id="pdf-dado">
+              <div class="img"></div>
+              <!-- <p></p> -->
             </div>
-            <div class="generator-pdf__item">
-              <img src="bricks/preview/bricks1.png" alt="">
-              <p>Баварская кладка кора дуба</p>
+            <div class="generator-pdf__item not-text" id="pdf-barrier">
+              <div class="img"></div>
+              <!-- <p></p> -->
             </div>
           </div>
         </div>
@@ -830,20 +830,20 @@
         </div>
         <div class="generator-pdf__content">
           <div class="generator-pdf__items">
-            <div class="generator-pdf__item -big">
-              <img src="bricks/preview/bricks1.png" alt="">
-              <p>Баварская кладка кора дуба</p>
+            <div class="generator-pdf__item -big" id="pdf-drain">
+              <div class="img"></div>
             </div>
-            <div class="generator-pdf__item -big">
-              <img src="bricks/preview/bricks1.png" alt="">
-              <p>Баварская кладка кора дуба</p>
+            <div class="generator-pdf__item -big" id="pdf-smokestack">
+              <div class="img"></div>
             </div>
-            <div class="generator-pdf__item -big">
-              <img src="bricks/preview/bricks1.png" alt="">
-              <p>Баварская кладка кора дуба</p>
+            <div class="generator-pdf__item -big" id="pdf-windows">
+              <div class="img"></div>
             </div>
           </div>
         </div>
+      </div>
+      <div class="generator-pdf__footer">
+        <p>akbarskeramic.ru ©</p>
       </div>
     </div>
   </div>
