--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css" />
-  <link rel="stylesheet" href="css/style.css?ver=1.4" />
-  <link rel="stylesheet" href="css/pdf.css">
+  <link rel="stylesheet" href="css/style.css?ver=1.5" />
+  <link rel="stylesheet" href="css/pdf.css?ver=1.5">
 
   <script async src="https://unpkg.com/es-module-shims@1.8.0/dist/es-module-shims.js"></script>
 
@@ -861,7 +861,7 @@
   "></script>
 
 
-  <script type="module" src="js/main.js?ver=1.4" defer></script>
+  <script type="module" src="js/main.js?ver=1.5" defer></script>
 </body>
 
 </html>
