--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
         <div class="tab-menu app-menu-item flex-center" data-chapter="dado" data-tooltip="Цоколь">
           <img class="icon" src="img/icons/house-active.svg" alt="" />
         </div>
+        <div class="tab-menu app-menu-item flex-center" data-chapter="land-menu" data-tooltip="Ландшафт">
+          <img class="icon" src="img/icons/three-active.svg" alt="" />
+        </div>
 
       </div>
       <div class="fr custom-scroll">
@@ -339,7 +342,20 @@
             </div>
           </div>
         </div>
-
+        <div class="app-chapter" id="land-menu">
+          <div class="inner">
+            <div class="group-items">
+              <div class="tab-menu-dop layout-group-item" data-chapter="land">
+                <div class="img"><img src="img/icons/three-active.svg" alt=""></div>
+                <h3>Ландшафт</h3>
+              </div>
+              <div class="tab-menu-dop layout-group-item" data-chapter="type-zabor">
+                <div class="img"><img src="img/icons/fence-active.svg" alt=""></div>
+                <h3>Тип Ограждения</h3>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="fd">
         <div class="app-chapter app-chapter-dop" id="bricks">
@@ -700,6 +716,55 @@
                 </div>
               </div>
               <div class="image-item" style="background-image: url(img/water/5.jpg);" data-color="053800">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="app-chapter app-chapter-dop" id="land">
+          <div class="inner">
+            <h2>Черепица</h2>
+            <div class="wrap-item custom-scroll">
+              <div class="item active" style="background-image: url(img/land/1.jpg);" data-model="Land-1">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land/2.jpg);" data-model="Land-2">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land/3.jpg);" data-model="Land-3">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/land/4.jpg);" data-model="Land-4">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="app-chapter app-chapter-dop" id="type-zabor">
+          <div class="inner">
+            <h2>Тип Ограждения</h2>
+            <div class="wrap-item custom-scroll">
+              <div class="item active" style="background-image: url(img/type-zabor/CoraDub.jpg);" data-model="1">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/type-zabor/low.jpg);" data-model="2">
+                <div class="btn-item">
+                  <span class="checked"></span>
+                </div>
+              </div>
+              <div class="item" style="background-image: url(img/type-zabor/grass.jpg);" data-model="3">
                 <div class="btn-item">
                   <span class="checked"></span>
                 </div>
